--- a/src/components/ForgetPassword/ForgetPassword.scss
+++ b/src/components/ForgetPassword/ForgetPassword.scss
@@ -1,3 +1,83 @@
+@media only screen and (max-width:480px) {
+    .box-forget {
+        background-image : url(../../assets/bg_quen_mat_khau.jpg);
+        background-repeat: no-repeat;
+        background-size  : cover;
+
+        .con-forget {
+            max-width     : 1400px;
+            flex-direction: column !important;
+
+            .row-forget {
+
+
+                .col-left {
+                    width : 100% !important;
+                    float : none;
+                    margin: auto;
+
+
+                    .form-group {
+                        display: flex;
+                        margin : 50px 0px 50px 0px;
+
+                        label {
+                            text-transform: capitalize;
+                            color         : #000000;
+                            font-weight   : bold;
+                            height        : 0 !important;
+                            line-height   : 20px !important;
+                        }
+
+                        .capcha-main {
+                            .captcha {
+                                canvas {
+                                    width : 100px !important;
+                                    height: 30px !important;
+                                }
+                            }
+
+                            .input-form {
+                                input {
+                                    width: 100% !important;
+                                }
+
+                            }
+                        }
+
+                        .col-label {
+                            width: 40%;
+                        }
+
+                        .col-input {
+                            width: 60%;
+                        }
+
+                        .btn-change {
+                            height          : 40px;
+                            text-transform  : capitalize;
+                            border          : none;
+                            background-color: #fcaf17;
+                            color           : #ffffff;
+                            font-weight     : bold;
+                            border-radius   : 5px;
+                        }
+                    }
+                }
+
+                .col-right {
+                    width: 100% !important;
+
+                    img {
+                        width: 100% !important;
+                    }
+                }
+            }
+        }
+
+    }
+}
+
 .box-forget {
     background-image : url(../../assets/bg_quen_mat_khau.jpg);
     background-repeat: no-repeat;
@@ -10,6 +90,7 @@
 
 
             .col-left {
+                width : 60%;
                 float : none;
                 margin: auto;
 
@@ -26,6 +107,14 @@
                         line-height   : 40px;
                     }
 
+                    .col-label {
+                        width: 40%;
+                    }
+
+                    .col-input {
+                        width: 60%;
+                    }
+
                     .btn-change {
                         height          : 40px;
                         text-transform  : capitalize;
@@ -39,6 +128,8 @@
             }
 
             .col-right {
+                width: 40%;
+
                 img {
                     width: 100%;
                 }
