--- a/src/components/BuyTicket/BookTicket.scss
+++ b/src/components/BuyTicket/BookTicket.scss
@@ -1,132 +1,296 @@
-.bookingDetailController {
-    width: 100%;
-    padding: 20px 150px;
-    //background-color: red;
+@media only screen and (max-width:480px) {
+    .bookingDetailController {
+        width         : 100%;
+        padding       : 0 !important;
+        flex-direction: column !important;
 
-    .ticket-wrapper {
-        // background-color: blue;
-        width: 100%;
-        height: 100%;
+        //background-color: red;
+        .col-tk-left {
+            width  : 100% !important;
+            padding: 5px !important;
 
-        .book-ticket,
-        .book-combo {
+            .ticket-wrapper {
+                // background-color: blue;
+                width : 100%;
+                height: 100%;
 
-            thead {
-                tr {
-                    background-color: #fff1d3;
+                .book-ticket,
+                .book-combo {
 
+                    thead {
 
-                }
-            }
+                        tr {
+                            background-color: #fff1d3;
+                        }
+                    }
 
-            th {
-                border: none;
-            }
+                    th {
+                        border: none;
+                    }
 
-            td {
-                border: none;
-            }
+                    td {
+                        border: none;
 
-            .title-book {
-                padding: 20px;
-                text-align: center;
-                background-color: orange;
-                color: #fff;
-                font-size: 15px;
-                font-weight: 650;
-                text-transform: uppercase;
-            }
+                    }
 
-            .inline-group {
+                    .info-1st {
+                        display       : flex !important;
+                        flex-direction: column !important;
+                    }
 
-                max-width: 9rem;
-                width: 200px;
-                /* height : 20px; */
-                /* height : 2px; */
-                padding: .5rem;
-                text-align: center;
-                margin: 0 auto;
+                    .title-book {
+                        padding         : 20px;
+                        text-align      : center;
+                        background-color: orange;
+                        color           : #fff;
+                        font-size       : 15px;
+                        font-weight     : 650;
+                        text-transform  : uppercase;
+                    }
 
-                .input-group-prepend {
-                    margin-right: -1px;
-                    height: 30px;
+                    .inline-group {
 
-                    /* width: 28px; */
-                    /* height: 30%; */
-                    button {
-                        padding: 0px;
-                        width: 30px;
-                        font-size: 12px;
+                        max-width : 5.5rem !important;
+                        width     : 90px !important;
+                        /* height : 20px; */
+                        /* height : 2px; */
+                        padding   : .5rem;
+                        text-align: center;
+                        margin    : 0 auto;
+
+                        .input-group-prepend {
+                            margin-right: -1px;
+                            height      : 30px;
+
+                            /* width: 28px; */
+                            /* height: 30%; */
+                            button {
+                                padding  : 0px;
+                                width    : 20px !important;
+                                font-size: 10px !important;
+                            }
+                        }
+
+                        .input-group-append {
+                            button {
+                                padding  : 0px;
+                                width    : 20px !important;
+                                font-size: 10px !important;
+                            }
+                        }
+                    }
+
+                    .inline-group .form-control {
+                        text-align: center;
+                        height    : 30px;
+                    }
+
+                    .form-control[type="number"]::-webkit-inner-spin-button,
+                    .form-control[type="number"]::-webkit-outer-spin-button {
+                        -webkit-appearance: none;
+                        margin            : 0;
                     }
                 }
-
-                .input-group-append {
-                    button {
-                        padding: 0px;
-                        width: 30px;
-                        font-size: 12px;
-                    }
-                }
-            }
-
-            .inline-group .form-control {
-                text-align: center;
-                height: 30px;
-            }
-
-            .form-control[type="number"]::-webkit-inner-spin-button,
-            .form-control[type="number"]::-webkit-outer-spin-button {
-                -webkit-appearance: none;
-                margin: 0;
-            }
-        }
-    }
-
-    .ticket-header {
-        width: 100%;
-        background-color: #fafafa;
-        padding: 10px;
-        margin-bottom: 15px;
-    }
-
-    .ticket-detail {
-        .ticket-title {
-            margin-top: 15px;
-            font-size: 14px;
-            line-height: 20px;
-            text-transform: uppercase;
-            color: #43464b;
-            font-weight: bold;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-
-            &.vn {
-                margin-top: 5px;
-                margin-bottom: 10px;
             }
         }
 
-        .submit-container {
-            padding-top: 20px;
-            display: flex;
-            text-align: center;
+        .col-tk-right {
+            width: 100% !important;
 
-            .button-book-submit {
-                width: 100%;
+            .ticket-header {
+                width           : 100%;
+                background-color: #fafafa;
+                padding         : 0px !important;
+                margin-bottom   : 15px;
 
+                img {
+                    width: 100% !important;
+                }
+            }
 
-                .btn-book {
-                    background-color: #FCAF17;
-                    width: 50%;
-                    height: 38px;
-                    font-size: 14px;
-                    color: #fff;
+            .ticket-detail {
+                .ticket-title {
+                    margin-top    : 15px;
+                    font-size     : 14px;
+                    line-height   : 20px;
                     text-transform: uppercase;
+                    color         : #43464b;
+                    font-weight   : bold;
+                    text-overflow : ellipsis;
+                    overflow      : hidden;
+                    white-space   : nowrap;
+
+                    &.vn {
+                        margin-top   : 5px;
+                        margin-bottom: 10px;
+                    }
                 }
 
+                .submit-container {
+                    padding-top: 20px;
+                    display    : flex;
+                    text-align : center;
 
+                    .button-book-submit {
+                        width: 100%;
+
+
+                        .btn-book {
+                            background-color: #FCAF17;
+                            width           : 50%;
+                            height          : 38px;
+                            font-size       : 14px;
+                            color           : #fff;
+                            text-transform  : uppercase;
+                        }
+
+
+                    }
+                }
+            }
+        }
+
+    }
+}
+
+.bookingDetailController {
+    width  : 100%;
+    padding: 20px 150px;
+
+    //background-color: red;
+    .col-tk-left {
+        width: 70%;
+
+        .ticket-wrapper {
+            // background-color: blue;
+            width : 100%;
+            height: 100%;
+
+            .book-ticket,
+            .book-combo {
+
+                thead {
+                    tr {
+                        background-color: #fff1d3;
+
+
+                    }
+                }
+
+                th {
+                    border: none;
+                }
+
+                td {
+                    border: none;
+                }
+
+                .title-book {
+                    padding         : 20px;
+                    text-align      : center;
+                    background-color: orange;
+                    color           : #fff;
+                    font-size       : 15px;
+                    font-weight     : 650;
+                    text-transform  : uppercase;
+                }
+
+                .inline-group {
+
+                    max-width : 9rem;
+                    width     : 200px;
+                    /* height : 20px; */
+                    /* height : 2px; */
+                    padding   : .5rem;
+                    text-align: center;
+                    margin    : 0 auto;
+
+                    .input-group-prepend {
+                        margin-right: -1px;
+                        height      : 30px;
+
+                        /* width: 28px; */
+                        /* height: 30%; */
+                        button {
+                            padding  : 0px;
+                            width    : 30px;
+                            font-size: 12px;
+                        }
+                    }
+
+                    .input-group-append {
+                        button {
+                            padding  : 0px;
+                            width    : 30px;
+                            font-size: 12px;
+                        }
+                    }
+                }
+
+                .inline-group .form-control {
+                    text-align: center;
+                    height    : 30px;
+                }
+
+                .form-control[type="number"]::-webkit-inner-spin-button,
+                .form-control[type="number"]::-webkit-outer-spin-button {
+                    -webkit-appearance: none;
+                    margin            : 0;
+                }
             }
         }
     }
+
+    .col-tk-right {
+        width: 30%;
+
+        .ticket-header {
+            width           : 100%;
+            background-color: #fafafa;
+            padding         : 10px;
+            margin-bottom   : 15px;
+        }
+
+        .ticket-detail {
+            .ticket-title {
+                margin-top    : 15px;
+                font-size     : 14px;
+                line-height   : 20px;
+                text-transform: uppercase;
+                color         : #43464b;
+                font-weight   : bold;
+                text-overflow : ellipsis;
+                overflow      : hidden;
+                white-space   : nowrap;
+
+                &.vn {
+                    margin-top   : 5px;
+                    margin-bottom: 10px;
+                }
+            }
+
+            .submit-container {
+                padding-top: 20px;
+                display    : flex;
+                text-align : center;
+
+                .button-book-submit {
+                    width: 100%;
+
+
+                    .btn-book {
+                        background-color: #FCAF17;
+                        width           : 50%;
+                        height          : 38px;
+                        font-size       : 14px;
+                        color           : #fff;
+                        text-transform  : uppercase;
+                    }
+
+
+                }
+            }
+        }
+    }
+
 }
