--- a/src/components/BuyTicket/Payment.scss
+++ b/src/components/BuyTicket/Payment.scss
@@ -1,148 +1,326 @@
-.paymentContainer {
-    width: 100%;
-    padding: 20px 150px;
+@media only screen and (max-width:480px) {
+    .paymentContainer {
+        width         : 100% !important;
+        padding       : 15px !important;
+        flex-direction: column !important;
 
-    .payment-wrapper {
-        width: 100%;
-        height: 100%;
+        .col-pay-left {
+            width: 100% !important;
 
-        .payment-header {
-            width: 100%;
-            display: flex;
-            padding-bottom: 10px;
-            border-bottom: 2px solid #656565;
+            .payment-wrapper {
+                width : 100%;
+                height: 100%;
 
-            .text-countdown {
-                font-size: 18px;
-                text-transform: uppercase;
-                font-weight: 700;
-            }
+                .payment-header {
+                    width         : 100%;
+                    display       : flex;
+                    padding-bottom: 10px;
+                    border-bottom : 2px solid #656565;
 
-            .countdown {
-                margin-left: auto;
-                order: 2;
-                color: rgb(252, 175, 23);
-                font-weight: 700;
-                font-size: 18px;
-            }
-        }
+                    .text-countdown {
+                        font-size     : 18px;
+                        text-transform: uppercase;
+                        font-weight   : 700;
+                    }
 
-        .form-payment {
-            width: 100%;
-            height: 100%;
-            padding-top: 10px;
-
-
-
-            .form-group {
-                display: flex;
-                padding-top: 30px;
-                padding-left: 0;
-                padding-right: 0;
-
-                label {
-                    color: #000;
-                    font-weight: 700;
-                    margin-bottom: 10px;
-                    padding: 0;
-                    font-size: 14px;
-                }
-
-                input {
-                    height: fit-content;
-                }
-
-                input[type="radio"] {
-                    -ms-transform: scale(1.5);
-                    /* IE 9 */
-                    -webkit-transform: scale(1.5);
-                    /* Chrome, Safari, Opera */
-                    transform: scale(1.3);
-                }
-
-                .select-payment,
-                .select-voucher {
-                    padding: 0;
-                }
-
-                .strikethrough {
-                    .line {
-                        height: 1px;
-                        display: block;
-                        margin-top: 10px;
-                        background-color: #000;
+                    .countdown {
+                        margin-left: auto;
+                        order      : 2;
+                        color      : rgb(252, 175, 23);
+                        font-weight: 700;
+                        font-size  : 18px;
                     }
                 }
 
-                .btn-payment {
-                    font-size: 15px;
-                    width: 40%;
-                    background-color: rgb(252, 175, 23);
-                    border: none
-                }
+                .form-payment {
+                    width      : 100%;
+                    height     : 100%;
+                    padding-top: 10px;
 
-                .btn-back {
-                    // fontSize: '20px', width: '200px', border: '1px solid #000', backgroundColor: '#fff', marginRight: '10px'
-                    font-size: 15px;
-                    width: 40%;
-                    background-color: #fff;
-                    border: 1px solid #bdbdbd;
-                    margin-right: 10px;
+
+
+                    .form-group {
+                        display      : flex;
+                        padding-top  : 30px;
+                        padding-left : 0;
+                        padding-right: 0;
+
+                        label {
+                            color        : #000;
+                            font-weight  : 700;
+                            margin-bottom: 10px;
+                            padding      : 0;
+                            font-size    : 14px;
+                        }
+
+                        input {
+                            height: fit-content;
+                        }
+
+                        input[type="radio"] {
+                            -ms-transform    : scale(1.5);
+                            /* IE 9 */
+                            -webkit-transform: scale(1.5);
+                            /* Chrome, Safari, Opera */
+                            transform        : scale(1.3);
+                        }
+
+                        .select-payment,
+                        .select-voucher {
+                            padding: 0;
+                        }
+
+                        .strikethrough {
+                            .line {
+                                height          : 1px;
+                                display         : block;
+                                margin-top      : 10px;
+                                background-color: #000;
+                            }
+                        }
+
+                        .btn-payment {
+                            font-size       : 15px;
+                            width           : 40%;
+                            background-color: rgb(252, 175, 23);
+                            border          : none
+                        }
+
+                        .btn-back {
+                            // fontSize: '20px', width: '200px', border: '1px solid #000', backgroundColor: '#fff', marginRight: '10px'
+                            font-size       : 15px;
+                            width           : 40%;
+                            background-color: #fff;
+                            border          : 1px solid #bdbdbd;
+                            margin-right    : 10px;
+                        }
+                    }
                 }
             }
         }
-    }
 
-    .ticket-header {
-        width: 100%;
-        background-color: #fafafa;
-        padding: 10px;
-        margin-bottom: 15px;
-    }
-
-    .ticket-detail {
-        .ticket-title {
-            margin-top: 15px;
-            font-size: 14px;
-            line-height: 20px;
-            text-transform: uppercase;
-            color: #43464b;
-            font-weight: bold;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
+        .col-none {
+            width: 100% !important;
         }
 
-        .submit-container {
-            padding-top: 20px;
-            display: flex;
-            height: 70px;
+        .col-pay-right {
+            width: 100% !important;
 
-            .button-book-submit {
-                width: 100%;
+            .ticket-header {
+                width           : 100%;
+                background-color: #fafafa;
+                padding         : 10px;
+                margin-bottom   : 15px;
+            }
 
-                .btn-book {
-                    background-color: #FCAF17;
-                    padding: 10px;
-                    width: 100%;
-                    height: 48px;
-                    font-weight: 700;
-                    color: #fff;
+            .ticket-detail {
+                .ticket-title {
+                    margin-top    : 15px;
+                    font-size     : 14px;
+                    line-height   : 20px;
                     text-transform: uppercase;
+                    color         : #43464b;
+                    font-weight   : bold;
+                    text-overflow : ellipsis;
+                    overflow      : hidden;
+                    white-space   : nowrap;
                 }
+
+                .submit-container {
+                    padding-top: 20px;
+                    display    : flex;
+                    height     : 70px;
+
+                    .button-book-submit {
+                        width: 100%;
+
+                        .btn-book {
+                            background-color: #FCAF17;
+                            padding         : 10px;
+                            width           : 100%;
+                            height          : 48px;
+                            font-weight     : 700;
+                            color           : #fff;
+                            text-transform  : uppercase;
+                        }
+                    }
+                }
+
+                .ticket-footer {
+                    line-height: 25px;
+
+                    .ticket-price-discount {
+                        p {
+                            font-size: 12px;
+                        }
+                    }
+                }
+
+
             }
         }
-
-        .ticket-footer {
-            line-height: 25px;
-
-            .ticket-price-discount {
-                p {
-                    font-size: 12px;
-                }
-            }
-        }
-
 
     }
+}
+
+.paymentContainer {
+    width  : 100%;
+    padding: 20px 150px;
+
+    .col-pay-left {
+        width: 60%;
+
+        .payment-wrapper {
+            width : 100%;
+            height: 100%;
+
+            .payment-header {
+                width         : 100%;
+                display       : flex;
+                padding-bottom: 10px;
+                border-bottom : 2px solid #656565;
+
+                .text-countdown {
+                    font-size     : 18px;
+                    text-transform: uppercase;
+                    font-weight   : 700;
+                }
+
+                .countdown {
+                    margin-left: auto;
+                    order      : 2;
+                    color      : rgb(252, 175, 23);
+                    font-weight: 700;
+                    font-size  : 18px;
+                }
+            }
+
+            .form-payment {
+                width      : 100%;
+                height     : 100%;
+                padding-top: 10px;
+
+
+
+                .form-group {
+                    display      : flex;
+                    padding-top  : 30px;
+                    padding-left : 0;
+                    padding-right: 0;
+
+                    label {
+                        color        : #000;
+                        font-weight  : 700;
+                        margin-bottom: 10px;
+                        padding      : 0;
+                        font-size    : 14px;
+                    }
+
+                    input {
+                        height: fit-content;
+                    }
+
+                    input[type="radio"] {
+                        -ms-transform    : scale(1.5);
+                        /* IE 9 */
+                        -webkit-transform: scale(1.5);
+                        /* Chrome, Safari, Opera */
+                        transform        : scale(1.3);
+                    }
+
+                    .select-payment,
+                    .select-voucher {
+                        padding: 0;
+                    }
+
+                    .strikethrough {
+                        .line {
+                            height          : 1px;
+                            display         : block;
+                            margin-top      : 10px;
+                            background-color: #000;
+                        }
+                    }
+
+                    .btn-payment {
+                        font-size       : 15px;
+                        width           : 40%;
+                        background-color: rgb(252, 175, 23);
+                        border          : none
+                    }
+
+                    .btn-back {
+                        // fontSize: '20px', width: '200px', border: '1px solid #000', backgroundColor: '#fff', marginRight: '10px'
+                        font-size       : 15px;
+                        width           : 40%;
+                        background-color: #fff;
+                        border          : 1px solid #bdbdbd;
+                        margin-right    : 10px;
+                    }
+                }
+            }
+        }
+    }
+
+    .col-none {
+        width: 10%;
+    }
+
+    .col-pay-right {
+        width: 30%;
+
+        .ticket-header {
+            width           : 100%;
+            background-color: #fafafa;
+            padding         : 10px;
+            margin-bottom   : 15px;
+        }
+
+        .ticket-detail {
+            .ticket-title {
+                margin-top    : 15px;
+                font-size     : 14px;
+                line-height   : 20px;
+                text-transform: uppercase;
+                color         : #43464b;
+                font-weight   : bold;
+                text-overflow : ellipsis;
+                overflow      : hidden;
+                white-space   : nowrap;
+            }
+
+            .submit-container {
+                padding-top: 20px;
+                display    : flex;
+                height     : 70px;
+
+                .button-book-submit {
+                    width: 100%;
+
+                    .btn-book {
+                        background-color: #FCAF17;
+                        padding         : 10px;
+                        width           : 100%;
+                        height          : 48px;
+                        font-weight     : 700;
+                        color           : #fff;
+                        text-transform  : uppercase;
+                    }
+                }
+            }
+
+            .ticket-footer {
+                line-height: 25px;
+
+                .ticket-price-discount {
+                    p {
+                        font-size: 12px;
+                    }
+                }
+            }
+
+
+        }
+    }
+
 }
