--- a/src/components/ChangePassword/ChangePassword.scss
+++ b/src/components/ChangePassword/ChangePassword.scss
@@ -1,3 +1,66 @@
+@media only screen and (max-width:480px) {
+    .box-change {
+        background-image : url(../../assets/bg_quen_mat_khau.jpg);
+        background-repeat: no-repeat;
+        background-size  : cover;
+
+        .con-change {
+            max-width: 1400px;
+
+            .row-input-change {
+                .col-left {
+                    width : 100% !important;
+                    float : none;
+                    margin: auto;
+
+                    .form-group {
+                        display: flex;
+                        margin : 20px 0px 20px 0px !important;
+
+                        label {
+                            text-transform: capitalize;
+                            font-weight   : bold;
+                            height        : fit-content !important;
+                            line-height   : 30px !important;
+                        }
+
+                        input {
+                            line-height: 30px !important;
+
+                        }
+
+                        .btn-change {
+                            height          : 40px;
+                            text-transform  : capitalize;
+                            border          : none;
+                            background-color: #fcaf17;
+                            color           : #ffffff;
+                            font-weight     : bold;
+                            border-radius   : 5px;
+                        }
+
+                        .col-label {
+                            width: 40% !important;
+                        }
+
+                        .col-input {
+                            width: 60% !important;
+                        }
+                    }
+                }
+
+                .col-right {
+                    width: 100% !important;
+
+                    img {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .box-change {
     background-image : url(../../assets/bg_quen_mat_khau.jpg);
     background-repeat: no-repeat;
@@ -8,6 +71,7 @@
 
         .row-input-change {
             .col-left {
+                width : 60%;
                 float : none;
                 margin: auto;
 
@@ -35,6 +99,8 @@
             }
 
             .col-right {
+                width: 40%;
+
                 img {
                     width: 100%;
                 }
