--- a/src/components/ListMovie/DanhSachPhim.scss
+++ b/src/components/ListMovie/DanhSachPhim.scss
@@ -1,5 +1,175 @@
+@media only screen and (max-width:480px) {
+    .list-movie-container {
+        width     : 100% !important;
+        height    : fit-content !important;
+        margin-top: 30px !important;
+        padding   : 0 !important;
+
+        .title-list {
+
+            .playing-movie,
+            .upcoming-movie {
+                padding        : 10px;
+                text-transform : uppercase;
+                color          : #555555;
+                text-decoration: none;
+                opacity        : 0.5;
+
+                &.active {
+                    color  : orange;
+                    opacity: 1;
+                }
+
+                &.disable {
+                    pointer-events: none;
+                    cursor        : default;
+                }
+
+                &:hover {
+                    opacity: 1;
+                }
+
+                cursor: pointer;
+            }
+        }
+
+        .list-movie {
+            margin-top: 20px;
+            padding   : 10px;
+
+            // .film {
+            //     width : 100%;
+            //     height: 100%;
+            //     cursor: pointer;
+
+            //     .img-film {
+            //         width : 300px;
+            //         height: 200px;
+            //     }
+
+            //     .name-film {
+            //         font-size      : 14px;
+            //         text-transform : uppercase;
+            //         font-weight    : 700;
+            //         margin-top     : 10px;
+            //         margin-bottom  : 5px;
+            //         display        : block;
+            //         text-decoration: none;
+            //         color          : #000;
+            //     }
+
+            //     .desc-film {
+            //         margin-bottom: 50px;
+            //     }
+            // }
+
+            .col-image {
+                width      : 100% !important;
+                padding    : 10px;
+                margin-top : 10px;
+                align-items: center;
+                cursor     : pointer;
+
+                .image {
+                    position       : relative;
+                    width          : 100%;
+                    justify-content: center;
+                    align-items    : center;
+                    display        : flex;
+
+
+
+                    .image__img {
+                        display: block;
+                        width  : 100%;
+                        height : 250px;
+
+                    }
+
+                    .image__overlay {
+                        position       : absolute;
+                        width          : 100%;
+                        height         : 100%;
+                        background     : rgba(0, 0, 0, 0.6);
+                        color          : #ffffff;
+                        font-family    : 'Quicksand', sans-serif;
+                        display        : flex;
+                        flex-direction : column;
+                        align-items    : center;
+                        justify-content: center;
+                        opacity        : 0;
+                        transition     : opacity 0.25s;
+
+                        --blur {
+                            backdrop-filter: blur(5px);
+                        }
+
+                        >* {
+                            transform : translateY(20px);
+                            transition: transform 0.25s;
+                        }
+
+                    }
+
+                    .image__overlay--primary {
+                        backdrop-filter: blur(2px);
+
+                        button {
+                            font-size: 12px;
+                        }
+                    }
+                }
+
+                .text-detail {
+                    margin-top: 10px;
+                    font-size : 13px;
+
+                    .vn {
+                        color         : #2e2e2e;
+                        text-transform: capitalize;
+                        text-overflow : ellipsis;
+                        overflow      : hidden;
+                        white-space   : nowrap;
+                        margin-bottom : 0;
+                    }
+
+                    .eng {
+
+                        text-transform: uppercase;
+                        color         : #a0a3a7;
+
+                    }
+
+                }
+
+                .image__overlay:hover {
+                    opacity: 1;
+
+                    >* {
+                        transform: translateY(0);
+                    }
+                }
+
+
+                .link-read-more {
+                    text-align: center;
+                    margin-top: 30px;
+
+                    a {
+                        text-decoration: none;
+                        text-transform : uppercase;
+                        color          : #fcaf17;
+                        font-weight    : bold;
+                    }
+                }
+            }
+
+        }
+    }
+}
+
 .list-movie-container {
-    width: 100%;
+    width : 100%;
     height: 800px;
 
     padding: 50px 150px;
@@ -8,20 +178,20 @@
 
         .playing-movie,
         .upcoming-movie {
-            padding: 10px;
-            text-transform: uppercase;
-            color: #555555;
+            padding        : 10px;
+            text-transform : uppercase;
+            color          : #555555;
             text-decoration: none;
-            opacity: 0.5;
+            opacity        : 0.5;
 
             &.active {
-                color: orange;
+                color  : orange;
                 opacity: 1;
             }
 
             &.disable {
                 pointer-events: none;
-                cursor: default;
+                cursor        : default;
             }
 
             &:hover {
@@ -34,7 +204,7 @@
 
     .list-movie {
         margin-top: 20px;
-        padding: 10px;
+        padding   : 10px;
 
         // .film {
         //     width : 100%;
@@ -63,46 +233,48 @@
         // }
 
         .col-image {
-            margin-top: 10px;
+            width      : 33.33%;
+            padding    : 10px;
+            margin-top : 10px;
             align-items: center;
-            cursor: pointer;
+            cursor     : pointer;
 
             .image {
-                position: relative;
-                width: 100%;
+                position       : relative;
+                width          : 100%;
                 justify-content: center;
-                align-items: center;
-                display: flex;
+                align-items    : center;
+                display        : flex;
 
 
 
                 .image__img {
                     display: block;
-                    width: 100%;
-                    height: 250px;
+                    width  : 100%;
+                    height : 250px;
 
                 }
 
                 .image__overlay {
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    background: rgba(0, 0, 0, 0.6);
-                    color: #ffffff;
-                    font-family: 'Quicksand', sans-serif;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
+                    position       : absolute;
+                    width          : 100%;
+                    height         : 100%;
+                    background     : rgba(0, 0, 0, 0.6);
+                    color          : #ffffff;
+                    font-family    : 'Quicksand', sans-serif;
+                    display        : flex;
+                    flex-direction : column;
+                    align-items    : center;
                     justify-content: center;
-                    opacity: 0;
-                    transition: opacity 0.25s;
+                    opacity        : 0;
+                    transition     : opacity 0.25s;
 
                     --blur {
                         backdrop-filter: blur(5px);
                     }
 
                     >* {
-                        transform: translateY(20px);
+                        transform : translateY(20px);
                         transition: transform 0.25s;
                     }
 
@@ -119,21 +291,21 @@
 
             .text-detail {
                 margin-top: 10px;
-                font-size: 13px;
+                font-size : 13px;
 
                 .vn {
-                    color: #2e2e2e;
+                    color         : #2e2e2e;
                     text-transform: capitalize;
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    margin-bottom: 0;
+                    text-overflow : ellipsis;
+                    overflow      : hidden;
+                    white-space   : nowrap;
+                    margin-bottom : 0;
                 }
 
                 .eng {
 
                     text-transform: uppercase;
-                    color: #a0a3a7;
+                    color         : #a0a3a7;
 
                 }
 
@@ -154,9 +326,9 @@
 
                 a {
                     text-decoration: none;
-                    text-transform: uppercase;
-                    color: #fcaf17;
-                    font-weight: bold;
+                    text-transform : uppercase;
+                    color          : #fcaf17;
+                    font-weight    : bold;
                 }
             }
         }
