--- a/src/components/ReviewMovie/DetailReviewFilm.scss
+++ b/src/components/ReviewMovie/DetailReviewFilm.scss
@@ -1,19 +1,224 @@
 @keyframes show-content {}
 
+@media only screen and (max-width:480px) {
+    .con-de {
+        padding: 0 !important;
+        width  : 100% !important;
+
+        .row-de {
+            margin-top    : 50px;
+            flex-direction: column !important;
+
+            .col-de-left {
+                width        : 100% !important;
+                padding-right: 10px !important;
+
+                .row-de-1 {
+                    margin-left: 20px;
+
+                    p {
+                        font-size  : 20px;
+                        font-weight: 700;
+                    }
+
+                }
+
+                hr {
+                    margin-left: 0 !important;
+                    margin-top : -15px;
+                    width      : 100% !important;
+                }
+
+                .row-de-fc {
+                    list-style-type: none;
+                    margin-left    : 0 !important;
+
+
+                    .fb-like {
+                        span {
+                            margin-right: 40px;
+                            margin-top  : 5px;
+
+                            iframe {
+                                width: 160px !important;
+
+                            }
+                        }
+                    }
+
+                    li {
+                        margin     : 0px 20px 0px 30px;
+                        line-height: 35px;
+                    }
+
+                    .rating-movie.rating-home {
+                        background-size: 20px;
+                        height         : 25px;
+                        padding-left   : 24px;
+                        margin-left    : 10px;
+                    }
+
+                    .rating-movie {
+                        font-size          : 15px;
+                        height             : 20px;
+                        background         : url(../../assets/ic_star_yellow.png) no-repeat;
+                        background-size    : 25px;
+                        padding-left       : 30px;
+                        background-position: left center;
+                        display            : table-cell;
+                        vertical-align     : middle;
+                    }
+
+                    .btn-review {
+                        text-transform: uppercase;
+                        height        : 25px;
+                        font-size     : 10px;
+                    }
+                }
+
+                .row-content-de {
+                    margin-left : 20px;
+                    margin-right: 20px;
+                    margin-top  : 30px;
+                    text-align  : justify;
+
+                    img {
+                        width: 100%;
+                    }
+
+                }
+
+                .row-content-readmore {
+                    text-align: justify;
+                    overflow  : hidden;
+                    max-height: 0;
+                    margin-top: 20px;
+                }
+
+                .active-readmore {
+                    max-height: fit-content !important;
+                }
+
+                .btn-readmore-de {
+                    justify-content: center;
+
+                    button {
+                        width        : 100px;
+                        height       : 40px;
+                        border       : none;
+                        border-radius: 5px;
+
+                        &:hover {
+                            background-color: #fcaf17;
+                            color           : #ffffff;
+                        }
+                    }
+                }
+
+                .comment-film {
+                    margin-top  : 30px;
+                    margin-left : 20px;
+                    margin-right: 20px;
+
+                    .title-cmt {
+                        h5 {
+                            position      : relative;
+                            text-transform: uppercase;
+                            font-size     : 13pt;
+                            color         : #000000;
+                            font-weight   : bold;
+                        }
+
+                        &:after {
+                            content   : "";
+                            position  : absolute;
+                            display   : block;
+                            left      : 8px !important;
+                            width     : 20% !important;
+                            margin-top: -8px;
+                            height    : 3px;
+                            background: #fcaf17;
+                        }
+                    }
+
+                    .form-cmt {
+                        padding-top: 20px;
+
+                        .area-51 {
+                            width        : 100%;
+                            height       : 100px;
+                            border-radius: 10px;
+                        }
+                    }
+
+                    .rating-cmt {
+                        margin-left: 0px;
+                    }
+
+                    .bottom-cmt {
+                        display   : flex;
+                        margin-top: 20px;
+
+
+                        .btn-send {
+                            display        : flex;
+                            justify-content: flex-end;
+                            margin-left    : auto;
+
+
+                            button {
+                                width        : 80px;
+                                height       : 32px;
+                                font-size    : 13px;
+                                border       : none;
+                                border-radius: 5px;
+
+                                &:hover {
+                                    background-color: #fcaf17;
+                                    color           : #ffffff;
+                                }
+                            }
+                        }
+                    }
+
+                }
+            }
+
+            .show-comment {
+                margin-top   : 40px;
+                margin-bottom: 20px;
+                margin-left  : 20px;
+                margin-right : 20px;
+
+                .user-name {
+                    text-transform: capitalize;
+                    font-weight   : bold;
+                    margin-bottom : 10px;
+                }
+
+                .number-rate {
+                    margin-bottom: 10px;
+                }
+
+            }
+        }
+    }
+}
+
 .con-de {
-    padding: 20px 150px;
+    padding  : 20px 150px;
     max-width: 1400px;
-    padding: 20px 150px;
 
     .row-de {
         margin-top: 50px;
 
         .col-de-left {
+            width        : 70%;
             padding-right: 50px;
 
             .row-de-1 {
                 p {
-                    font-size: 20px;
+                    font-size  : 20px;
                     font-weight: 700;
                 }
 
@@ -21,19 +226,19 @@
 
             hr {
                 margin-left: -10px;
-                margin-top: -15px;
-                width: 100%;
+                margin-top : -15px;
+                width      : 100%;
             }
 
             .row-de-fc {
                 list-style-type: none;
-                margin-left: -40px;
+                margin-left    : -40px;
 
 
                 .fb-like {
                     span {
                         margin-right: 40px;
-                        margin-top: 5px;
+                        margin-top  : 5px;
 
                         iframe {
                             width: 160px !important;
@@ -43,32 +248,32 @@
                 }
 
                 li {
-                    margin: 0px 20px 0px 30px;
+                    margin     : 0px 20px 0px 30px;
                     line-height: 35px;
                 }
 
                 .rating-movie.rating-home {
                     background-size: 20px;
-                    height: 25px;
-                    padding-left: 24px;
-                    margin-left: 10px;
+                    height         : 25px;
+                    padding-left   : 24px;
+                    margin-left    : 10px;
                 }
 
                 .rating-movie {
-                    font-size: 15px;
-                    height: 20px;
-                    background: url(../../assets/ic_star_yellow.png) no-repeat;
-                    background-size: 25px;
-                    padding-left: 30px;
+                    font-size          : 15px;
+                    height             : 20px;
+                    background         : url(../../assets/ic_star_yellow.png) no-repeat;
+                    background-size    : 25px;
+                    padding-left       : 30px;
                     background-position: left center;
-                    display: table-cell;
-                    vertical-align: middle;
+                    display            : table-cell;
+                    vertical-align     : middle;
                 }
 
                 .btn-review {
                     text-transform: uppercase;
-                    height: 25px;
-                    font-size: 10px;
+                    height        : 25px;
+                    font-size     : 10px;
                 }
             }
 
@@ -84,7 +289,7 @@
 
             .row-content-readmore {
                 text-align: justify;
-                overflow: hidden;
+                overflow  : hidden;
                 max-height: 0;
                 margin-top: 20px;
             }
@@ -97,14 +302,14 @@
                 justify-content: center;
 
                 button {
-                    width: 100px;
-                    height: 40px;
-                    border: none;
+                    width        : 100px;
+                    height       : 40px;
+                    border       : none;
                     border-radius: 5px;
 
                     &:hover {
                         background-color: #fcaf17;
-                        color: #ffffff;
+                        color           : #ffffff;
                     }
                 }
             }
@@ -114,20 +319,20 @@
 
                 .title-cmt {
                     h5 {
-                        position: relative;
+                        position      : relative;
                         text-transform: uppercase;
-                        font-size: 13pt;
-                        color: #000000;
-                        font-weight: bold;
+                        font-size     : 13pt;
+                        color         : #000000;
+                        font-weight   : bold;
                     }
 
                     &:after {
-                        content: "";
-                        position: absolute;
-                        display: block;
-                        left: 13px;
-                        width: 10%;
-                        height: 3px;
+                        content   : "";
+                        position  : absolute;
+                        display   : block;
+                        left      : 13px;
+                        width     : 10%;
+                        height    : 3px;
                         background: #fcaf17;
                     }
                 }
@@ -136,8 +341,8 @@
                     padding-top: 20px;
 
                     .area-51 {
-                        width: 100%;
-                        height: 100px;
+                        width        : 100%;
+                        height       : 100px;
                         border-radius: 10px;
                     }
                 }
@@ -147,26 +352,26 @@
                 }
 
                 .bottom-cmt {
-                    display: flex;
+                    display   : flex;
                     margin-top: 20px;
 
 
                     .btn-send {
-                        display: flex;
+                        display        : flex;
                         justify-content: flex-end;
-                        margin-left: auto;
+                        margin-left    : auto;
 
 
                         button {
-                            width: 80px;
-                            height: 32px;
-                            font-size: 13px;
-                            border: none;
+                            width        : 80px;
+                            height       : 32px;
+                            font-size    : 13px;
+                            border       : none;
                             border-radius: 5px;
 
                             &:hover {
                                 background-color: #fcaf17;
-                                color: #ffffff;
+                                color           : #ffffff;
                             }
                         }
                     }
@@ -176,13 +381,13 @@
         }
 
         .show-comment {
-            margin-top: 40px;
+            margin-top   : 40px;
             margin-bottom: 20px;
 
             .user-name {
                 text-transform: capitalize;
-                font-weight: bold;
-                margin-bottom: 10px;
+                font-weight   : bold;
+                margin-bottom : 10px;
             }
 
             .number-rate {
