--- a/src/components/ReviewMovie/ReviewFilms.scss
+++ b/src/components/ReviewMovie/ReviewFilms.scss
@@ -1,29 +1,180 @@
+@media only screen and (max-width:480px) {
+    .review-con {
+        width: 100% !important;
+
+        .row-review {
+            //display    : flex;
+            padding-top   : 30px;
+            flex-direction: column !important;
+
+            .col-left {
+                padding: 20px;
+                width  : 100% !important;
+
+                .title {
+                    h5 {
+                        position      : relative;
+                        text-transform: uppercase;
+                        font-size     : 13pt;
+                        color         : #000000;
+                        font-weight   : bold;
+                    }
+
+                    &:after {
+                        content   : "";
+                        position  : absolute;
+                        display   : block;
+                        width     : 20% !important;
+                        height    : 3px;
+                        margin-top: -5px;
+                        background: #fcaf17;
+                        float     : left;
+                    }
+                }
+
+                .list-films {
+                    padding-top: 20px;
+
+                    .blog {
+                        width         : 100% !important;
+                        margin-bottom : 30px;
+                        flex-direction: column !important;
+
+                        .movie-thumb {
+                            .img-review {
+                                width     : 100% !important;
+                                display   : block;
+                                object-fit: contain;
+                            }
+                        }
+
+                        .content-title {
+                            margin-left   : 0 !important;
+                            flex-direction: column;
+
+                            h5 {
+                                text-align: justify;
+
+                                .link {
+                                    font-size: 16px;
+                                    color    : #000000;
+
+
+                                    &:hover {
+                                        color: #fcaf17;
+                                    }
+                                }
+                            }
+
+
+                            .summary {
+                                color             : #a0a3a7;
+                                display           : block;
+                                display           : -webkit-box;
+                                max-width         : 100%;
+                                -webkit-line-clamp: 3;
+                                -webkit-box-orient: vertical;
+                                overflow          : hidden;
+                                text-overflow     : ellipsis;
+                                font-size         : 14px;
+                                margin            : 10px 0;
+                                font-weight       : lighter;
+                                max-height        : 63px;
+                                text-align        : justify;
+
+                            }
+
+                            .row-fc {
+                                // margin-top: 20px;
+
+                                .list-fc {
+                                    padding        : 0;
+                                    list-style-type: none;
+                                    display        : flex;
+
+                                    .btn-review {
+                                        text-transform: uppercase;
+                                        height        : 25px;
+                                        font-size     : 10px;
+                                    }
+
+                                    .fb-like {
+                                        span {
+                                            //margin-right: 40px;
+                                            margin-top: 5px;
+
+                                            iframe {
+                                                width: 160px !important;
+
+                                            }
+                                        }
+                                    }
+
+                                    li {
+                                        margin     : 0px 20px 0px 10px;
+                                        line-height: 40px;
+                                    }
+
+                                    .rating-movie.rating-home {
+                                        background-size: 15px;
+                                        height         : 30px;
+                                        padding-left   : 24px;
+                                        margin-left    : 10px;
+                                    }
+
+                                    .rating-movie {
+                                        font-size          : 20px;
+                                        height             : 40px;
+                                        background         : url(../../assets/ic_star_yellow.png) no-repeat;
+                                        background-size    : 30px;
+                                        padding-left       : 30px;
+                                        background-position: left center;
+                                        display            : table-cell;
+                                        vertical-align     : middle;
+                                    }
+                                }
+                            }
+                        }
+
+
+                    }
+                }
+            }
+        }
+
+    }
+}
+
 .review-con {
-    max-width: 1400px;
-    padding: 30px 150px;
+    max-width  : 1230px;
+    //padding  : 30px 150px;
 
     .row-review {
+        //display    : flex;
         padding-top: 30px;
 
         .col-left {
+            padding: 20px;
+            width  : 70%;
+
             .title {
                 h5 {
-                    position: relative;
+                    position      : relative;
                     text-transform: uppercase;
-                    font-size: 13pt;
-                    color: #000000;
-                    font-weight: bold;
+                    font-size     : 13pt;
+                    color         : #000000;
+                    font-weight   : bold;
                 }
 
                 &:after {
-                    content: "";
-                    position: absolute;
-                    display: block;
-                    left: 13px;
-                    width: 10%;
-                    height: 3px;
+                    content   : "";
+                    position  : absolute;
+                    display   : block;
+                    width     : 5%;
+                    height    : 3px;
                     margin-top: -5px;
                     background: #fcaf17;
+                    float     : left;
                 }
             }
 
@@ -32,24 +183,24 @@
 
                 .blog {
                     margin-bottom: 30px;
-                    display: flex;
+                    display      : flex;
 
                     .movie-thumb {
                         .img-review {
-                            width: 250px;
-                            display: block;
+                            width     : 250px;
+                            display   : block;
                             object-fit: contain;
                         }
                     }
 
                     .content-title {
-                        margin-left: 20px;
+                        margin-left   : 20px;
                         flex-direction: column;
 
                         h5 {
                             .link {
                                 font-size: 16px;
-                                color: #000000;
+                                color    : #000000;
 
 
                                 &:hover {
@@ -60,18 +211,18 @@
 
 
                         .summary {
-                            color: #a0a3a7;
-                            display: block;
-                            display: -webkit-box;
-                            max-width: 100%;
+                            color             : #a0a3a7;
+                            display           : block;
+                            display           : -webkit-box;
+                            max-width         : 100%;
                             -webkit-line-clamp: 3;
                             -webkit-box-orient: vertical;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            font-size: 14px;
-                            margin: 10px 0;
-                            font-weight: lighter;
-                            max-height: 63px;
+                            overflow          : hidden;
+                            text-overflow     : ellipsis;
+                            font-size         : 14px;
+                            margin            : 10px 0;
+                            font-weight       : lighter;
+                            max-height        : 63px;
 
                         }
 
@@ -79,14 +230,14 @@
                             // margin-top: 20px;
 
                             .list-fc {
-                                padding: 0;
+                                padding        : 0;
                                 list-style-type: none;
-                                display: flex;
+                                display        : flex;
 
                                 .btn-review {
                                     text-transform: uppercase;
-                                    height: 25px;
-                                    font-size: 10px;
+                                    height        : 25px;
+                                    font-size     : 10px;
                                 }
 
                                 .fb-like {
@@ -102,26 +253,26 @@
                                 }
 
                                 li {
-                                    margin: 0px 20px 0px 10px;
+                                    margin     : 0px 20px 0px 10px;
                                     line-height: 40px;
                                 }
 
                                 .rating-movie.rating-home {
                                     background-size: 15px;
-                                    height: 30px;
-                                    padding-left: 24px;
-                                    margin-left: 10px;
+                                    height         : 30px;
+                                    padding-left   : 24px;
+                                    margin-left    : 10px;
                                 }
 
                                 .rating-movie {
-                                    font-size: 20px;
-                                    height: 40px;
-                                    background: url(../../assets/ic_star_yellow.png) no-repeat;
-                                    background-size: 30px;
-                                    padding-left: 30px;
+                                    font-size          : 20px;
+                                    height             : 40px;
+                                    background         : url(../../assets/ic_star_yellow.png) no-repeat;
+                                    background-size    : 30px;
+                                    padding-left       : 30px;
                                     background-position: left center;
-                                    display: table-cell;
-                                    vertical-align: middle;
+                                    display            : table-cell;
+                                    vertical-align     : middle;
                                 }
                             }
                         }
