--- a/src/components/Share/SearchBar.scss
+++ b/src/components/Share/SearchBar.scss
@@ -1,17 +1,96 @@
+@media only screen and (max-width: 480px) {
+    .center-contents {
+        position: relative;
+
+        .searchInput {
+            display: flex;
+
+            input {
+                background-color  : white;
+                border            : 1px solid #ced0da;
+                border-width      : 1px 0 1px 1px;
+                font-size         : 12px;
+                padding           : 3px 25px 3px 10px;
+                //padding         : 10px;
+                height            : 30px;
+                width             : 100%;
+
+                &:focus {
+                    outline: none;
+                }
+            }
+
+            .iconSearch {
+                font-size       : 12px;
+                line-height     : 30px;
+                width           : 40px;
+                display         : grid;
+                place-items     : center;
+                background-color: #FCAF17;
+                color           : #fff;
+                cursor          : pointer;
+
+                .clearBtn {
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .result {
+            margin-top      : 2px;
+            width           : 300px;
+            // height: 300px;
+            background-color: rgb(255, 255, 255);
+            box-shadow      : rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            overflow        : scroll;
+            display         : inline-block;
+            position        : absolute;
+            z-index         : 1;
+            padding         : 10px 2px;
+
+
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+
+            .dataItem {
+                width      : 100%;
+                height     : 50px;
+                display    : flex;
+                align-items: center;
+                color      : black;
+
+                p {
+                    margin-left: 10px;
+                }
+            }
+
+            a {
+                text-decoration: none;
+
+                &:hover {
+                    background-color: aliceblue;
+                }
+            }
+        }
+    }
+}
+
 .center-contents {
     position: relative;
 
     .searchInput {
-        display: flex;
+        display  : flex;
         // width: 50%;
         // height: 50%;
 
         input {
             background-color: white;
-            border: 1px solid #ced0da;
-            border-width: 1px 0 1px 1px;
-            font-size: 12px;
-            padding: 3px 25px 3px 10px;
+            border          : 1px solid #ced0da;
+            border-width    : 1px 0 1px 1px;
+            font-size       : 12px;
+            padding         : 3px 25px 3px 10px;
             // padding: 10px;
             // height: 40px;
             // width: 100%;
@@ -22,14 +101,14 @@
         }
 
         .iconSearch {
-            font-size: 12px;
-            line-height: 30px;
-            width: 40px;
-            display: grid;
-            place-items: center;
+            font-size       : 12px;
+            line-height     : 30px;
+            width           : 40px;
+            display         : grid;
+            place-items     : center;
             background-color: #FCAF17;
-            color: #fff;
-            cursor: pointer;
+            color           : #fff;
+            cursor          : pointer;
 
             .clearBtn {
                 cursor: pointer;
@@ -38,16 +117,16 @@
     }
 
     .result {
-        margin-top: 2px;
-        width: 300px;
+        margin-top      : 2px;
+        width           : 300px;
         // height: 300px;
         background-color: rgb(255, 255, 255);
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        overflow: scroll;
-        display: inline-block;
-        position: absolute;
-        z-index: 1;
-        padding: 10px 2px;
+        box-shadow      : rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        overflow        : scroll;
+        display         : inline-block;
+        position        : absolute;
+        z-index         : 1;
+        padding         : 10px 2px;
 
 
 
@@ -56,11 +135,11 @@
         }
 
         .dataItem {
-            width: 100%;
-            height: 50px;
-            display: flex;
+            width      : 100%;
+            height     : 50px;
+            display    : flex;
             align-items: center;
-            color: black;
+            color      : black;
 
             p {
                 margin-left: 10px;
