--- a/src/components/SupportQA/HoTroGiaiDap.scss
+++ b/src/components/SupportQA/HoTroGiaiDap.scss
@@ -8,31 +8,126 @@
     }
 }
 
+@media only screen and (max-width:480px) {
+    .support-content {
+        padding  : 0 !important;
+        max-width: 100% !important;
+
+        .row-support {
+
+            .col-left {
+                margin-top: 15px;
+                width     : 100% !important;
+
+                .title-tab {
+
+                    ul {
+                        width         : 100% !important;
+                        display       : flex !important;
+                        padding-bottom: 10px !important;
+                        margin        : -20px !important;
+
+                        li {
+                            list-style-type: none;
+                            margin         : 0 auto !important;
+
+                            a {
+                                text-decoration: none;
+                                text-transform : uppercase;
+                                color          : #555555;
+                                font-size      : 12pt !important;
+                                cursor         : pointer;
+                                white-space    : nowrap;
+
+                                &:hover {
+                                    color      : #fcaf17;
+                                    font-weight: bold;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .accordion {
+                    .card {
+                        margin            : 20px;
+                        -webkit-box-shadow: none;
+                        box-shadow        : none;
+
+                        .card-header {
+
+                            background-color: #fafafa;
+                            border-color    : #eeeeee;
+
+                            h6 {
+                                .title {
+                                    text-transform: capitalize;
+                                    font-size     : 10pt;
+                                    font-weight   : 400;
+
+                                    .icon {
+                                        &::before {
+                                            content: "\002b";
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        .collapse {
+                            .card-body {
+                                p {
+                                    text-align: justify;
+                                    font-size : 11pt;
+                                }
+
+                                ul {
+
+                                    li {
+                                        text-align: justify;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+
+    }
+}
+
 .support-content {
-    padding: 40px 150px;
+    padding  : 40px 150px;
+    max-width: 1400px;
 
     .row-support {
 
         .col-left {
+            margin-top: 15px;
+            width     : 70%;
 
             .title-tab {
+
                 ul {
-                    display: flex;
+                    display       : flex;
+                    padding-bottom: 10px;
 
                     li {
                         list-style-type: none;
-                        margin-left: 20px;
-                        margin-right: 20px;
+                        margin-left    : 20px;
+                        margin-right   : 20px;
 
                         a {
                             text-decoration: none;
-                            text-transform: uppercase;
-                            color: #555555;
-                            font-size: 15pt;
-                            cursor: pointer;
+                            text-transform : uppercase;
+                            color          : #555555;
+                            font-size      : 15pt;
+                            cursor         : pointer;
 
                             &:hover {
-                                color: #fcaf17;
+                                color      : #fcaf17;
                                 font-weight: bold;
                             }
                         }
@@ -42,20 +137,20 @@
 
             .accordion {
                 .card {
-                    margin: 20px;
+                    margin            : 20px;
                     -webkit-box-shadow: none;
-                    box-shadow: none;
+                    box-shadow        : none;
 
                     .card-header {
 
                         background-color: #fafafa;
-                        border-color: #eeeeee;
+                        border-color    : #eeeeee;
 
                         h6 {
                             .title {
                                 text-transform: capitalize;
-                                font-size: 10pt;
-                                font-weight: 400;
+                                font-size     : 10pt;
+                                font-weight   : 400;
 
                                 .icon {
                                     &::before {
@@ -70,7 +165,7 @@
                         .card-body {
                             p {
                                 text-align: justify;
-                                font-size: 11pt;
+                                font-size : 11pt;
                             }
 
                             ul {
@@ -84,113 +179,67 @@
                 }
             }
         }
-
-        // .accordion {
-        //     padding-left: 60px;
-
-        //     .btn-show {
-        //         background-color: #eee;
-        //         color           : #444;
-        //         cursor          : pointer;
-        //         padding         : 18px;
-        //         width           : 100%;
-        //         border          : none;
-        //         text-align      : left;
-        //         outline         : none;
-        //         font-size       : 15px;
-        //         transition      : 0.4s;
-
-        //         // .active &:hover {
-        //         //     background-color: #ccc;
-        //         // }
-
-        //         &:after {
-        //             content    : '\002B';
-        //             color      : #777;
-        //             font-weight: bold;
-        //             float      : right;
-        //             margin-left: 5px;
-        //         }
-
-        //         .active:after {
-        //             content: "\002D";
-        //         }
-
-        //     }
-
-        //     .answer {
-        //         padding           : 0 18px;
-        //         background-color  : white;
-        //         max-height        : 0;
-        //         //transition      : height 5s ease-out !important;
-        //         overflow          : hidden;
-
-        //     }
-
-
-
-        // }
     }
 
-    .col-right {
-        .title {
-            h5 {
-                position: relative;
-                text-transform: uppercase;
-                font-size: 13pt;
-                color: #000000;
-                font-weight: bold;
-            }
+    //     .col-right {
+    //         .title {
+    //             h5 {
+    //                 position      : relative;
+    //                 text-transform: uppercase;
+    //                 font-size     : 13pt;
+    //                 color         : #000000;
+    //                 font-weight   : bold;
+    //             }
 
-            &:after {
-                content: "";
-                position: absolute;
-                display: block;
-                left: 13px;
-                width: 30%;
-                height: 3px;
-                margin-top: -5px;
-                background: #fcaf17;
-            }
-        }
+    //             &:after {
+    //                 content   : "";
+    //                 position  : absolute;
+    //                 display   : block;
+    //                 left      : 13px;
+    //                 width     : 30%;
+    //                 height    : 3px;
+    //                 margin-top: -5px;
+    //                 background: #fcaf17;
+    //             }
+    //         }
 
-        .col-image {
-            padding-top: 20px;
+    //         .col-image {
+    //             padding-top: 20px;
 
-            .image-pdc {
-                flex-direction: column;
+    //             .image-pdc {
+    //                 flex-direction: column;
 
-                img {
-                    width: 100%;
-                }
+    //                 img {
+    //                     width: 100%;
+    //                 }
 
-                .vn {
-                    text-transform: uppercase;
-                    font-weight: bold;
-                    color: #000000;
-                }
+    //                 .vn {
+    //                     text-transform: uppercase;
+    //                     font-weight   : bold;
+    //                     color         : #000000;
+    //                 }
 
-                .eng {
-                    text-transform: uppercase;
-                    color: #555555;
+    //                 .eng {
+    //                     text-transform: uppercase;
+    //                     color         : #555555;
 
-                }
-            }
+    //                 }
+    //             }
 
-            .link-read-more {
-                text-align: center;
+    //             .link-read-more {
+    //                 text-align: center;
 
-                a {
-                    text-decoration: none;
-                    text-transform: uppercase;
-                    color: #fcaf17;
-                    font-weight: bold;
-                }
-            }
-        }
+    //                 a {
+    //                     text-decoration: none;
+    //                     text-transform : uppercase;
+    //                     color          : #fcaf17;
+    //                     font-weight    : bold;
+    //                 }
+    //             }
+    //         }
 
 
-    }
+    //     }
 
 }
 
